osx: match river/alacritty mappings

--- a/config/karabiner/karabiner.yaml
+++ b/config/karabiner/karabiner.yaml
@@ -12,6 +12,35 @@ profiles:
         basic.to_if_alone_timeout_milliseconds: 200
         basic.to_if_held_down_threshold_milliseconds: 0
       rules:
+        - description: spotlight
+          manipulators:
+            - from:
+                key_code: delete_forward
+                modifiers:
+                  mandatory:
+                    - command
+                    - control
+                    - option
+              to:
+                - key_code: spacebar
+                  modifiers:
+                    - command
+              type: basic
+        - description: lock screen
+          manipulators:
+            - from:
+                key_code: backslash
+                modifiers:
+                  mandatory:
+                    - command
+                    - control
+                    - option
+              to:
+                - key_code: x
+                  modifiers:
+                    - command
+                    - control
+              type: basic
         - description: close all
           manipulators:
             - from:
@@ -27,21 +56,6 @@ profiles:
                   modifiers:
                     - command
                     - shift
-              type: basic
-        - description: lock
-          manipulators:
-            - from:
-                key_code: escape
-                modifiers:
-                  mandatory:
-                    - command
-                    - control
-                    - option
-              to:
-                - key_code: x
-                  modifiers:
-                    - command
-                    - control
               type: basic
         - description: close
           manipulators:
