xdg: explicit $BROWSER, nvim handles inode/x-empty

--- a/local/share/applications/nvim-term.desktop
+++ b/local/share/applications/nvim-term.desktop
@@ -1,4 +1,4 @@
 [Desktop Entry]
 Name=Neovim Terminal
 Exec=term -e nvim %F
-MimeType=text/english;text/plain;text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-java;text/x-moc;text/x-pascal;text/x-tcl;text/x-tex;application/x-shellscript;text/x-c;text/x-c++;text/x-shellscript;application/javascript;application/json;application/octet-stream;application/x-wine-extension-ini;
+MimeType=inode/x-empty;text/english;text/plain;text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-java;text/x-moc;text/x-pascal;text/x-tcl;text/x-tex;application/x-shellscript;text/x-c;text/x-c++;text/x-shellscript;application/javascript;application/json;application/octet-stream;application/x-wine-extension-ini;
