--- a/config/karabiner/karabiner.yaml
+++ b/config/karabiner/karabiner.yaml
@@ -30,6 +30,7 @@ profiles:
                     - shift
               type: basic
         - description: spotlight
+          enabled: false
           manipulators:
             - from:
                 key_code: delete_forward
