--- a/config/vimium/vimium-options.yaml
+++ b/config/vimium/vimium-options.yaml
@@ -49,7 +49,7 @@ searchEngines: |-
 searchUrl: https://duckduckgo.com/?q=%s
 settingsVersion: 2.0.6
 userDefinedLinkHintCss: |-2
-STYLESHEET
+STYLESHEET:
 exclusionRules:
   - passKeys: ""
     pattern: https?://mail.google.com/*
