chromium: document arch launcher flags

--- a/config/chrome-flags.conf
+++ b/config/chrome-flags.conf
@@ -1,2 +1,4 @@
+# Requires the arch wrapper script to pass these arguments through e.g. /usr/bin/brave /usr/bin/google-chrome-stable
+# SPWA files like /home/alex/.local/share/applications/brave-fmg will need to be changed to the wrapper e.g. Exec=/opt/brave-bin/brave
 --ozone-platform-hint=auto
 --enable-features=WebRTCPipeWireCapturer
