--- a/config/nvim/.luarc.json
+++ b/config/nvim/.luarc.json
@@ -4,8 +4,28 @@
   "workspace": {
     "library": [
       "$VIMRUNTIME/lua",
-      "${3rd}/luv/library",
-      "$XDG_DATA_HOME/nvim/site/pack/packer/start"
+      
+      "/home/alex/.local/share/nvim/site/pack/packer/start/gitsigns.nvim/lua/gitsigns.lua",
+      "/home/alex/.local/share/nvim/site/pack/packer/start/gitsigns.nvim/lua/gitsigns/actions.lua",
+
+      "/home/alex/.local/share/nvim/site/pack/packer/start/nvim-tree.lua/lua/nvim-tree.lua",
+      "/home/alex/.local/share/nvim/site/pack/packer/start/nvim-tree.lua/lua/nvim-tree/api.lua",
+
+      "/home/alex/.local/share/nvim/site/pack/packer/start/lualine.nvim/lua/lualine.lua",
+
+      "/home/alex/.local/share/nvim/site/pack/packer/start/rainbow-delimiters.nvim/lua/rainbow-delimiters.lua",
+      "/home/alex/.local/share/nvim/site/pack/packer/start/rainbow-delimiters.nvim/lua/rainbow-delimiters/setup.lua",
+
+      "/home/alex/.local/share/nvim/site/pack/packer/start/nvim-spectre/lua/spectre/config.lua",
+
+      "/home/alex/.local/share/nvim/site/pack/packer/start/nvim-treesitter/lua/nvim-treesitter/configs.lua",
+
+      "/home/alex/.local/share/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/init.lua",
+      "/home/alex/.local/share/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/presets.lua",
+      "/home/alex/.local/share/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/config.lua",
+      "/home/alex/.local/share/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/types.lua",
+
+      "${3rd}/luv/library"
     ]
   },
   "diagnostics": {
