vim: use XDG_DATA_HOME for luarc

--- a/config/nvim/.luarc.json
+++ b/config/nvim/.luarc.json
@@ -4,28 +4,29 @@
   "workspace": {
     "library": [
       "$VIMRUNTIME/lua",
+      "${3rd}/luv/library",
       
-      "/home/alex/.local/share/nvim/site/pack/packer/start/gitsigns.nvim/lua/gitsigns.lua",
-      "/home/alex/.local/share/nvim/site/pack/packer/start/gitsigns.nvim/lua/gitsigns/actions.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/gitsigns.nvim/lua/gitsigns.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/gitsigns.nvim/lua/gitsigns/actions.lua",
 
-      "/home/alex/.local/share/nvim/site/pack/packer/start/nvim-tree.lua/lua/nvim-tree.lua",
-      "/home/alex/.local/share/nvim/site/pack/packer/start/nvim-tree.lua/lua/nvim-tree/api.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/nvim-tree.lua/lua/nvim-tree.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/nvim-tree.lua/lua/nvim-tree/api.lua",
 
-      "/home/alex/.local/share/nvim/site/pack/packer/start/lualine.nvim/lua/lualine.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/lualine.nvim/lua/lualine.lua",
 
-      "/home/alex/.local/share/nvim/site/pack/packer/start/rainbow-delimiters.nvim/lua/rainbow-delimiters.lua",
-      "/home/alex/.local/share/nvim/site/pack/packer/start/rainbow-delimiters.nvim/lua/rainbow-delimiters/setup.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/rainbow-delimiters.nvim/lua/rainbow-delimiters.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/rainbow-delimiters.nvim/lua/rainbow-delimiters/setup.lua",
 
-      "/home/alex/.local/share/nvim/site/pack/packer/start/nvim-spectre/lua/spectre/config.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/nvim-spectre/lua/spectre/config.lua",
 
-      "/home/alex/.local/share/nvim/site/pack/packer/start/nvim-treesitter/lua/nvim-treesitter/configs.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/nvim-treesitter/lua/nvim-treesitter/configs.lua",
 
-      "/home/alex/.local/share/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/init.lua",
-      "/home/alex/.local/share/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/presets.lua",
-      "/home/alex/.local/share/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/config.lua",
-      "/home/alex/.local/share/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/types.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/init.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/presets.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/config.lua",
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/which-key.nvim/lua/which-key/types.lua",
 
-      "${3rd}/luv/library"
+      "$XDG_DATA_HOME/nvim/site/pack/packer/start/    DISABLED"
     ]
   },
   "diagnostics": {
