keyd: hardcode super-backspace to ctrl-w; ydotool now applies other modifiers i.e. the super

--- a/root/etc/keyd/default.conf
+++ b/root/etc/keyd/default.conf
@@ -1,13 +1,35 @@
 [ids]
 
-# thinkpad from keyd monitor
-0001:0001:70533846
+*
 
 [main]
 
 capslock = escape
 
-leftalt = leftmeta
-rightalt = rightmeta
-leftmeta = leftalt
+[meta]
+# map M-backspace to C-w (C-, keycode) releasing meta modifier
+backspace = C-,
+
+# map other meta-backspace modifiers normally, they will stack
+[meta+shift]
+backspace = M-S-backspace
+
+[meta+control]
+backspace = M-C-backspace
+
+[meta+alt]
+backspace = M-A-backspace
+
+
+
+[ids]
+
+# thinkpad from keyd monitor
+0001:0001:70533846
+
+[main]
+
+leftalt = layer(meta)
+rightalt = layer(meta)
+leftmeta = layer(alt)
 
