alacritty: titles for macos

--- a/host-G2XTD9VMR2/config/alacritty/host.toml
+++ b/host-G2XTD9VMR2/config/alacritty/host.toml
@@ -1,6 +1,6 @@
 [window]
-decorations = "Transparent"
-padding = { x = 0, y = 18 }
+decorations = "Full"
+padding = { x = 0, y = 0 }
 dynamic_padding = true
 
 [selection]
