qt5ct: base16 bright

--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -1,7 +1,8 @@
 [Appearance]
-color_scheme_path=/usr/share/qt5ct/colors/darker.conf
+# https://github.com/mnussbaum/base16-qt5ct 
+color_scheme_path=/home/alex/.config/qt5ct/colors/base16-bright.conf
 custom_palette=true
 
 [Fonts]
-fixed="Hack Nerd Font,11"
+fixed="Monospace,11"
 general="Sans Serif,11"
