--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -32,4 +32,9 @@ VRR_OFF:
   - LG Display 0x05EF
   - Samsung Display Corp. 0x4165
 CALLBACK_CMD: notify-send "way-displays ${CALLBACK_LEVEL}" "${CALLBACK_MSG}"
+DISABLED:
+  - NAME_DESC: eDP-1
+    IF:
+      - PLUGGED:
+          - '!^DP-1$'
 
