chromium: update startup flags following major chromium changes

--- a/config/chrome-flags.conf
+++ b/config/chrome-flags.conf
@@ -1,4 +1,13 @@
-# Requires the arch wrapper script to pass these arguments through e.g. /usr/bin/brave /usr/bin/google-chrome-stable
-# SPWA files like /home/alex/.local/share/applications/brave-fmg will need to be changed to the wrapper e.g. Exec=/opt/brave-bin/brave
---ozone-platform-hint=auto
---enable-features=WebRTCPipeWireCapturer
+# Requires the arch wrapper script to pass these arguments through: /usr/bin/brave /usr/bin/google-chrome-stable
+#
+# Brave SPWA /home/alex/.local/share/applications/brave-0 do not use the wrapper.
+# Change from:
+#   Exec=/opt/brave-bin/brave
+# to:
+#   Exec=/usr/bin/brave
+
+# 2025 09 13:
+#   grey screen
+#   --ozone-platform-hint was removed, with wayland being correctly detected and used
+#   --render-node-override=/dev/dri/renderD128 is being automatically set which fails on multi-gpu machines
+--render-node-override=
