chromium: add issue link for gpu problems

--- a/config/chrome-flags.conf
+++ b/config/chrome-flags.conf
@@ -10,4 +10,5 @@
 #   grey screen
 #   --ozone-platform-hint was removed, with wayland being correctly detected and used
 #   --render-node-override=/dev/dri/renderD128 is being automatically set which fails on multi-gpu machines
+#   possible issue: https://issues.chromium.org/issues/396434686
 --render-node-override=
