mangohud: add 3 presets

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -1,119 +1,27 @@
-# /usr/share/doc/mangohud/MangoHud.conf.example
+# top left minimal green
+preset=11
 
-# presets.conf not available at 0.6.9.1
+# vertical
+# preset=12
 
-full=0
-
-toggle_hud=F6
-
-toggle_logging=F5
-output_folder=/tmp
-
-#
-# 2 horizontal preset, from code
-#
-# horizontal=1
-# legacy_layout=0
-# fps=1
-# table_columns=20
-# frame_timing=1
-# frametime=0
-# cpu_stats=1
-# gpu_stats=1
-# ram=1
-# vram=1
-# battery=1
-# hud_no_margin=1
-# gpu_power=1
-# cpu_power=1
-# battery_watt=1
-# battery_time=1
-
-
-#
-# top left
-#
-# cpu_stats=1
-# cpu_temp=0
-# cpu_power=0
-
-# gpu_stats=1
-# gpu_temp=0
-# gpu_power=0
-
-# fps=1
-# frametime=0
-
-# frame_timing=1
-
-# hud_compact=1
-# hud_no_margin=1
-
-# font_size=28
-
-# alpha=0.5
-
-# table_columns=1
-
-# position=top-left
-
-
-#
 # horizontal
-#
-# horizontal=1
+# preset=13
 
-# cpu_stats=1
-# cpu_temp=0
-# cpu_power=0
 
-# gpu_stats=1
-# gpu_temp=0
-# gpu_power=0
+# fps only
+# preset=1
 
-# fps=1
-# frametime=0
+# horizontal view
+# preset=2
 
-# frame_timing=1
+# extended
+# preset=3
 
-# hud_compact=1
-# hud_no_margin=1
-
-# alpha=0.5
-# background_alpha=0
-
-# vram_color=777777
-
-# table_columns=20
-
-#
-# top left minimal
-#
-#
-position=top-left
 
 gpu_list=0
 
-cpu_stats=0
-gpu_stats=1
-fps=1
-frametime=0
-frame_timing=0
+reload_cfg=F4
+toggle_hud=F5
 
-hud_compact=1
-hud_no_margin=1
-
-font_size=30
-
-alpha=0.8
-background_alpha=0.2
-
-table_columns=2
-
-width=150
-offset_x=-70
-cellpadding_y=+0.05
-
-text_color=00CC00
-text_outline_thickness=1
-
+# toggle_logging=F4
+# output_folder=/tmp
