mangohud: add preset order and toggle

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -1,27 +1,10 @@
-# top left minimal green
-preset=11
-
-# vertical
-# preset=12
-
-# horizontal
-# preset=13
-
-
-# fps only
-# preset=1
-
-# horizontal view
-# preset=2
-
-# extended
-# preset=3
-
+preset=11,12,13,4,1
 
 gpu_list=0
 
-reload_cfg=F4
+toggle_preset=F4
+
 toggle_hud=F5
 
-# toggle_logging=F4
+# toggle_logging=F3
 # output_folder=/tmp
