mangohud: add cpu and gpu clocks

--- a/config/MangoHud/presets.conf
+++ b/config/MangoHud/presets.conf
@@ -56,10 +56,12 @@ frametime=0
 gpu_text=G 
 gpu_stats
 gpu_junction_temp
+gpu_core_clock
 
 cpu_text=C
 cpu_stats
 cpu_temp
+cpu_mhz
 
 #
 # horizontal
@@ -86,9 +88,11 @@ frame_timing
 cpu_text=C
 cpu_stats
 cpu_temp
+cpu_mhz
 
 gpu_text=G
 gpu_stats
 gpu_junction_temp
 gpu_power
+gpu_core_clock
 
