mangohud: add fps avg and 1%

--- a/config/MangoHud/presets.conf
+++ b/config/MangoHud/presets.conf
@@ -39,19 +39,14 @@ position=top-left
 
 table_columns=1
 
-hud_compact
 hud_no_margin
 
-alpha=0.875
-background_alpha=0
+alpha=0.75
+background_alpha=0.125
 
 font_size=28
 
 text_color=DDDDDD
-
-fps_text=F
-fps
-frametime=0
 
 gpu_text=G 
 gpu_stats
@@ -62,6 +57,10 @@ cpu_text=C
 cpu_stats
 cpu_temp
 cpu_mhz
+
+fps_text=F
+fps
+fps_metrics=avg,0.01
 
 #
 # horizontal
@@ -74,7 +73,7 @@ horizontal
 
 hud_no_margin
 
-alpha=0.875
+alpha=0.75
 background_alpha=0.25
 
 text_color=CCCCCC
@@ -84,6 +83,7 @@ fps_text=F
 fps
 frametime=0
 frame_timing
+fps_metrics=avg,0.01
 
 cpu_text=C
 cpu_stats
