mangohud: consistent presets

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -1,10 +1,13 @@
-preset=11,12,13,4,1
+preset=12,13,11,4,1
 
 gpu_list=0
 
-toggle_preset=F4
+reload_cfg=F3
+
+# toggle_logging=F4
+# output_folder=/tmp
 
 toggle_hud=F5
 
-# toggle_logging=F3
-# output_folder=/tmp
+toggle_preset=F6
+
