--- a/config/MangoHud/presets.conf
+++ b/config/MangoHud/presets.conf
@@ -48,9 +48,12 @@ font_size=28
 
 text_color=DDDDDD
 
-gpu_text=G 
+width=97.5
+
+gpu_text=G
 gpu_stats
 gpu_junction_temp
+gpu_power
 gpu_core_clock
 
 cpu_text=C
@@ -60,6 +63,7 @@ cpu_mhz
 
 fps_text=F
 fps
+frametime=0
 fps_metrics=avg,0.01
 
 #
@@ -75,6 +79,8 @@ hud_no_margin
 
 alpha=0.75
 background_alpha=0.25
+
+font_size=28
 
 text_color=CCCCCC
 vram_color=777777
