--- a/config/waybar/config
+++ b/config/waybar/config
@@ -10,7 +10,9 @@
   "modules-right": [
     "custom/space",
     "custom/slstatus",
-    "tray"
+    "clock#date",
+    "clock#time",
+    "tray",
   ],
   "fixed-center": false,
   "tray": {
@@ -41,6 +43,14 @@
   },
   "custom/space": {
     "format": "  ",
+  },
+  "clock#date": {
+    "interval": 60,
+    "format": "│ {:%a %d %b} ",
+  },
+  "clock#time": {
+    "interval": 1,
+    "format": "{:%H:%M:%S} ",
   },
 }
 
