brave: remove --render-node-override workaround, enable Vulkan

--- a/config/chrome-flags.conf
+++ b/config/chrome-flags.conf
@@ -6,9 +6,5 @@
 # to:
 #   Exec=/usr/bin/brave
 
-# 2025 09 13:
-#   grey screen
-#   --ozone-platform-hint was removed, with wayland being correctly detected and used
-#   --render-node-override=/dev/dri/renderD128 is being automatically set which fails on multi-gpu machines
-#   possible issue: https://issues.chromium.org/issues/396434686
---render-node-override=
+# 2025 09 20 disabled by default
+--enable-features=Vulkan
