chrome: disable Vulkan

--- a/config/chrome-flags.conf
+++ b/config/chrome-flags.conf
@@ -6,5 +6,5 @@
 # to:
 #   Exec=/usr/bin/brave
 
-# 2025 09 20 disabled by default
---enable-features=Vulkan
+# 2025 09 26 not functional for video
+# --enable-features=Vulkan
