--- a/config/vimium/vimium-options.yaml
+++ b/config/vimium/vimium-options.yaml
@@ -133,3 +133,7 @@ STYLESHEET:
 exclusionRules:
   - passKeys: ""
     pattern: https?://mail.google.com/*
+  - passKeys: ""
+    pattern: https?://mail.proton.me/*
+  - passKeys: ""
+    pattern: https?://192.168.1.*/viewer.html
