qt5/6: base16 -> standard darker colours

--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -1,6 +1,5 @@
 [Appearance]
-# https://github.com/mnussbaum/base16-qt5ct 
-color_scheme_path=/home/alex/.config/qt5ct/colors/base16-bright.conf
+color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
 
 [Fonts]
