--- a/config/qt6ct/qt6ct.conf
+++ b/config/qt6ct/qt6ct.conf
@@ -1,5 +1,5 @@
 [Appearance]
-color_scheme_path=/home/alex/.config/qt6ct/colors/base16-bright.conf
+color_scheme_path=/usr/share/qt6ct/colors/darker.conf
 custom_palette=true
 
 [Fonts]
