vimium: exclude google docs

--- a/config/vimium/vimium-options.yaml
+++ b/config/vimium/vimium-options.yaml
@@ -130,3 +130,5 @@ exclusionRules:
     pattern: https?://mail.google.com/*
   - passKeys: ""
     pattern: https?://mail.proton.me/*
+  - passKeys: ""
+    pattern: https?://docs.google.com/*
