--- a/root/etc/keyd/laptop.conf
+++ b/root/etc/keyd/laptop.conf
@@ -1,7 +1,7 @@
 [ids]
 
-# thinkpad and framework from keyd monitor
-0001:0001:70533846
+# Seems to match any AT Translated Set 2 keyboard
+0001:0001:09b4e68d
 
 include common
 
