Revert "waybar: experiment hiding vacant river tags"
This reverts commit 2c46a45291e0355b11776854dd1c2aad5a2654e8.

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -19,7 +19,7 @@
     "spacing": 6
   },
   "river/tags": {
-    "hide-vacant": true,
+    "disable-click": false,
     "num-tags": 10
   },
   "river/layout": {
